name:                fluidsynth
version:             0.1.0.0
synopsis:            High-level bindings for the FluidSynth software synthesizer
--description:         
homepage:            http://github.com/bgamari/fluidsynth
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2015 Ben Gamari
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Sound.FluidSynth
  build-depends:       base >=4.8 && <4.9,
                       either >=4.3 && <4.4,
                       transformers >=0.4 && <0.5,
                       bindings-fluidsynth >=0.1 && <0.2
  default-language:    Haskell2010